add decision tree and bayesian classifier

--- a/a3/src/Makefile
+++ b/a3/src/Makefile
@@ -1,2 +1,12 @@
-all:
-	python main.py
+INPUT='../data/full.txt'
+
+all: knn dtree
+
+knn:
+	python main.py -i $(INPUT) -a knn -r 0.95
+
+dtree:
+	python main.py -i $(INPUT) -a dtree -r 0.95
+
+bayes:
+	python main.py -i $(INPUT) -a bayes -r 0.95
